[gd_scene load_steps=4 format=2]

[ext_resource path="res://DownloadButton.gd" type="Script" id=1]
[ext_resource path="res://themes/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://TileBar.gd" type="Script" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.156863, 0.184314, 0.266667, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="TileBar" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 33.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TileBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2

[node name="MinButton" type="Button" parent="MarginContainer/VBoxContainer/TileBar/HBoxContainer"]
margin_left = 898.0
margin_right = 938.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
text = "min"
flat = true

[node name="MaxButton" type="Button" parent="MarginContainer/VBoxContainer/TileBar/HBoxContainer"]
margin_left = 938.0
margin_right = 978.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
text = "max"
flat = true

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TileBar/HBoxContainer"]
margin_left = 978.0
margin_right = 1024.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
text = "close"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="SideBar" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 567.0
rect_min_size = Vector2( 120, 0 )
color = Color( 0.0980392, 0.113725, 0.196078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/SideBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 191.0
margin_top = 96.0
margin_right = 191.0
margin_bottom = 96.0

[node name="MainBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 1024.0
margin_bottom = 567.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="HeaderBox" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox"]
visible = false
margin_right = 904.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
color = Color( 0.0980392, 0.113725, 0.196078, 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox"]
margin_right = 904.0
margin_bottom = 405.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Button" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer"]
margin_left = 100.0
margin_right = 804.0
margin_bottom = 405.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer/Button"]
visible = false
margin_right = 704.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Thumbnail" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer/Button"]
margin_right = 704.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer/Button"]
margin_top = 300.0
margin_right = 704.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
text = "Download Game"
script = ExtResource( 1 )

[node name="ProgressBar" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer/Button"]
margin_top = 400.0
margin_right = 704.0
margin_bottom = 405.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0.309804, 0.376471, 0.815686, 1 )

[connection signal="gui_input" from="MarginContainer/VBoxContainer/TileBar" to="MarginContainer/VBoxContainer/TileBar" method="_on_TileBar_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TileBar/HBoxContainer/MinButton" to="MarginContainer/VBoxContainer/TileBar" method="_on_MinButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TileBar/HBoxContainer/MaxButton" to="MarginContainer/VBoxContainer/TileBar" method="_on_MaxButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TileBar/HBoxContainer/CloseButton" to="MarginContainer/VBoxContainer/TileBar" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer/Button/Button" to="MarginContainer/VBoxContainer/HBoxContainer/MainBox/MarginContainer/Button/Button" method="_on_Button_pressed"]
